Changed architecture of client, add cheker nicknemes, camera following, changed class Player